apps/talos-home/falco/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: falcosidekick-ui
  namespace: falco
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`falco.lan`)
      kind: Rule
      services:
        - name: falco-falcosidekick-ui
          port: 2802
  tls:
    secretName: falco-tls
